# final-project

./: .env.example  check_syntax.py  complete_pytest_fix.ps1  debug_output.py  diagnose_black_detailed.ps1  diagnose_black_issue.ps1  diagnose_flake8.ps1  diagnose_pytest_issue.ps1  final_check.ps1  fix_all_black.ps1  fix_backslash_issue.ps1  fix_black_formatting.ps1  fix_black_issues.ps1  fix_flake8_e402.ps1  fix_flake8_issues.ps1  fix_pyproject.ps1  fix_pytest_cov_issue.ps1  get-pip.py  manual_fix_black.ps1  manual_fix_flake8.ps1  new_feature.py  pyproject.toml  pyproject.toml.backup  recreate_new_feature.py  requirements.txt  setup-branch-protection.ps1  setup-workflows.ps1  test_black_minimal.py  test_file.txt  verify_fix.ps1  verify_pytest_fix.ps1
.github/workflows/: ci.yml  feature-branch.yml  pull-dev.yml  push-dev.yml
app/: __init__.py  main.py  new_feature.py  new_feature.py.backup  utils.py
tests/: __init__.py  conftest.py  test_main.py  test_new_feature.py
