[project]
name = "my_project"
version = "0.1.0"
description = "A simple Python application with best practices"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = "."

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503,E402"
exclude = ".git,__pycache__,build,dist,.venv,venv,black_backup_*"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"